--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -18,6 +18,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
   @apply text-gray-950;
 }
 
@@ -28,9 +29,18 @@ a {
 body {
   margin: 0;
   place-items: center;
-  width: 100vw;
   min-width: 320px;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+body > main {
+  flex: 1;
+}
+
+body > * {
+  width: 100%;
 }
 
 li {
@@ -52,8 +62,20 @@ li {
 }
 
 .bg-dashboard-dark {
-  background-color: #EAF0F2;
-;
+  background-color: #eaf0f2;
+}
+
+.dragovered {
+  @apply border-primary bg-dashboard-dark opacity-70;
+}
+
+
+.bg-playbar {
+  background-color: #517D98;
+}
+
+.bg-playbar-dark {
+  background-color: #101828;
 }
 
 @media (prefers-color-scheme: light) {
