--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ li {
 }
 
 .bg-dashboard-img {
-  background-image: url("https://s3-alpha-sig.figma.com/img/a7ad/d563/1a1296588a7a290a58e8b7fe704a1bd4?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=AM0ZANrO4U3y7UFk2j4u-d0qKvnDGNbJcBowjbpftiJBDOATyKJGyNhSy8iuVZuL93ETmhPuoqZjlLJ55YkFLpryslhpd0VfDq8vR-RSh0Hhg8967N~xI94etZQ4y1RZRaeBQ-qEwWk2cAMwqm7SH0oZobnZP5wuYTDIwh7QyfclmE4c-DkHC9QzPVfdEfB5uzk6eQbXZDttqhEa1cj~3lSIf5RRk0aCN3daduYZ7QLorpfGg18hs1YFDCl0DfSZl9kDrBWlIzkl4VkNUT3w7IFxPlegpCybbGbSGotEHuou2KWm-lygJtRrm-1Qj5AJVabdYIb28tcRTXjmKPcTYQ__");
+  background-image: url("https://s3-alpha-sig.figma.com/img/a7ad/d563/1a1296588a7a290a58e8b7fe704a1bd4?Expires=1729468800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=qxK30XZ7iz6zJKAvJFW5~nZcMt-dYwKLdmvX-KKlnZ0mey9C3an3XRPA35fNfOqZzUOGg3rNxfGsnZnDWDpn2M88t2XnMHR~eSOsrx~7uEC5wUz4CWb3fvWkpRqwrvWLJHyPUwHVIfdPpcoEAoVev9ZBG8axWO0etojnjMihJNTdUt0gcj2u8vdJyNUuI8ztTbkC0ez~KJB4AZGOaB0nckqgx-SKJPvsNJkUlZ2JpPT4M9C9QksYA8TVh2qpS-S86RZIRnLX~SggVs8IAPRpg0z2anq6G8oXZTSOmvVgVG1TBbExA771BQK6m5cFBvc-Z0ObkL5wXoUXzh1Gy-I9zQ__");
   background-size: cover;
   background-position: center;
 }
